--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
+  left: 0;
 }
 
 footer p {
@@ -44,6 +45,41 @@ footer p {
   margin: 16px;
   float: left;
 }
+
+.input-note {
+  background-color: #fff;
+  width: 70%;
+  margin: 20px auto;
+  padding: 10px 5px 70px;
+  border-radius: 15px;
+}
+
+.input-header,
+.input-body {
+  padding: 10px 10px;
+  border: none;
+  font-family: "McLaren";
+  font-size: large;
+  /* background-color: #cfcfcf; */
+}
+
+.btn-add {
+  padding: 10px;
+  border: none;
+  background-color: #f5ba13;
+  color: #fff;
+  border-radius: 100%;
+  position: relative;
+  top: 95px;
+  right: -50%;
+  cursor: pointer;
+}
+
+.input-header,
+.input-body:focus-visible {
+  outline: none;
+}
+
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
