--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,6 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
-  left: 0;
 }
 
 footer p {
@@ -45,41 +44,6 @@ footer p {
   margin: 16px;
   float: left;
 }
-
-.input-note {
-  background-color: #fff;
-  width: 70%;
-  margin: 20px auto;
-  padding: 10px 5px 70px;
-  border-radius: 15px;
-}
-
-.input-header,
-.input-body {
-  padding: 10px 10px;
-  border: none;
-  font-family: "McLaren";
-  font-size: large;
-  width: 200px;
-}
-
-.btn-add {
-  padding: 10px;
-  border: none;
-  background-color: #f5ba13;
-  color: #fff;
-  border-radius: 100%;
-  position: relative;
-  top: 95px;
-  right: -50%;
-  cursor: pointer;
-}
-
-.input-header,
-.input-body:focus-visible {
-  outline: none;
-}
-
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
@@ -91,10 +55,48 @@ footer p {
   word-wrap: break-word;
 }
 
-.delete-note {
-  background-color: #fff;
-  border: none;
+.note button {
+  position: relative;
+  float: right;
+  margin-right: 10px;
   color: #f5ba13;
-  margin-left: 80%;
+  border: none;
+  width: 36px;
+  height: 36px;
   cursor: pointer;
+  outline: none;
+}
+
+form.create-note {
+  position: relative;
+  width: 480px;
+  margin: 30px auto 20px auto;
+  background: #fff;
+  padding: 15px;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
+form.create-note input,
+form.create-note textarea {
+  width: 100%;
+  border: none;
+  padding: 4px;
+  outline: none;
+  font-size: 1.2em;
+  font-family: inherit;
+  resize: none;
+}
+form.create-note button {
+  position: absolute;
+  right: 18px;
+  bottom: -18px;
+  background: #f5ba13;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
 }
